Fix RGBW widget on Safari and iOS

--- a/src/widgets/SwitchRGBW.css
+++ b/src/widgets/SwitchRGBW.css
@@ -5,6 +5,7 @@
 
 .SwitchRGBW .toggle {
   width: 29%;
+  height: 100%;
   min-width: 80px;
   border: none;
 }
@@ -15,6 +16,8 @@
 }
 
 .SwitchRGBW button {
+  display: block;
+  margin: 0;
   transition: all .3s ease-out;
   font-size: 18px;
   font-weight: lighter;
@@ -38,30 +41,34 @@
 }
 
 .SwitchRGBW .hue {
-  background: linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);
   height: 100%;
   margin: 0 0 10px 10px;
+  flex: 1;
+  background: linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);
   cursor: pointer;
   opacity: .9;
   filter: saturate(85%);
 }
 
 .SwitchRGBW .swatch {
+  position: relative;
   display: flex;
   height: 100%;
   margin: 0 0 0 10px;
+  flex: 1;
 }
 
 .SwitchRGBW .swatch * {
-  width: calc(100% / 5);
-  height: 100%;
+  display: flex;
+  flex: 1;
+  padding: 0;
   border: none;
   background-color: transparent;
 }
 
 .SwitchRGBW button.white {
-  background-color: white;
   width: 100%;
+  background-color: white;
   border: 2px solid transparent;
 }
 
